libs/@local/hashql/ast/tests/ui/lower/expander/import-resolver/module-not-found.jsonc
//@ run: fail
//@ description: Tests that importing from a non-existent module produces an appropriate error with suggestions
["use", "kernel::foo", { "#tuple": ["baz"] }, "_"]
//~^ ERROR cannot find module `foo`
